[package]
name = "biotonic-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework & actors
actix = "0.13"
actix-web = "4"
actix-ws = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "tls-rustls", "uuid", "chrono"] }
deadpool-postgres = "0.14"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Redis
redis = { version = "0.30", features = ["tokio-comp", "aio"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
env_logger = "0.11"
log = "0.4"
futures = "0.3"
futures-util = "0.3"
dotenvy = "0.15"
dashmap = "6"
once_cell = "1"
rand = "0.9"
anyhow = "1"

# JWT support
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

# Monitoring
prometheus = "0.14"
actix-web-prom = "0.9"

# Testing
actix-rt = "2.10"

# Aptos
hex = "0.4"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
url = "2"
 
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
